--- a/css/signUp.css
+++ b/css/signUp.css
@@ -1,12 +1,33 @@
 .body{
- background: dodgerblue;
+    background: dodgerblue;
 }
 .white{
- background: #ffffff;
- top-margin: 30%
-
+   background: white;
+    padding:30px;
+    border-radius: 10px;
+    margin-top: 60px;
+    width:500px;
 
 }
-.email{
- top: 30px;
+.header{
+    border-bottom: 1px solid #EAEAEA;
+}
+
+.input-margin{
+    margin-top: 30px;
+}
+
+.login-here {
+    padding: 20px 30px;
+    text-align: center;
+    color: #FFF;
+}
+
+.login-here a {
+    color: #FFF;
+    text-decoration: underline;
+}
+
+.margin{
+    margin-top: 20px;
 }
